kubernetes/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: excellence-nettoyage-api #application name
    version: v0.0.7
  name: ena-deployment #pod's name
  namespace: default
spec:
  replicas: 1 #number of pods
  minReadySeconds: 45 #give thc container to wait 45 seconds to get ready
  selector:
    matchLabels:
      app: excellence-nettoyage-api
      version: v0.0.7
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: excellence-nettoyage-api
        version: v0.0.7
    spec:
      containers:
        - image: edvilla/excellence-api:v0.0.7
          imagePullPolicy: Always
          name: excellence-api-image
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: excellence-nettoyage-api
  name: ena-service
  namespace: default
  annotations:
    #Healcheck issue (3 days wasted),  I've created a custom healthcheck because of the type of loadbalancer (Application (Classic))
    #check more: https://cloud.google.com/kubernetes-engine/docs/how-to/ingress-configuration#direct_health
    cloud.google.com/backend-config: '{"default": "ena-backend-config"}'
spec:
  ports:
    - port: 8000 #external port
      protocol: TCP
      targetPort: 8080 #api port
  selector:
    app: excellence-nettoyage-api
  sessionAffinity: None
  type: NodePort
